--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,9 +1,5 @@
-# https://taskfile.dev
-
+---
 version: '3'
-
-vars:
-  GREETING: Hello, World!
 
 tasks:
   decrypt:
@@ -16,5 +12,5 @@ tasks:
       - sops -e env_vars/pve04.tfvars > env_vars/pve04.tfvars.enc
   default:
     cmds:
-      - echo "{{.GREETING}}"
+      - task -l
     silent: true
