--- a/lxc_clone/Taskfile.yml
+++ b/lxc_clone/Taskfile.yml
@@ -2,6 +2,18 @@
 version: '3'
 
 tasks:
+  plan-d:
+    desc: Debug plan
+    cmds:
+      - task: plan
+    env:
+      TF_LOG: DEBUG
+  apply-d:
+    desc: Debug apply
+    cmds:
+      - task: apply
+    env:
+      TF_LOG: "DEBUG"
   apply:
     desc: Apply
     cmds:
@@ -12,7 +24,7 @@ tasks:
       - terraform init
   plan:
     desc: Plan
-    cmde:
+    cmds:
       - terraform plan -var-file=secrets.tfvars
   decrypt:
     desc: Decrypt vars using SOPS
